--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
   ],
   "husky": {
       "hooks": {
-          "commit-msg": "echo 12345"
+          "commit-msg": "echo cqycqy"
       }
   }
 }
