--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
   ],
   "husky": {
       "hooks": {
-          "commit-msg": "echo $HASKY_GIT_PARAMS"
+          "commit-msg": "node scripts/verify-commit.js"
       }
   }
 }
