--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "speed-measure-webpack-plugin": "^1.3.3",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^3.0.8",
+    "validate-commit-msg": "^2.14.0",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.11",
@@ -102,8 +103,16 @@
     "not dead"
   ],
   "husky": {
-      "hooks": {
-          "commit-msg": "node scripts/verify-commit.js"
+    "hooks": {
+      "commit-msg": "validate-commit-msg"
+    }
+  },
+  "config": {
+      "validate-commit-msg": {
+        "types": ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"],
+        "scope": {
+            "required": true
+        }
       }
   }
 }
