--- a/package.json
+++ b/package.json
@@ -97,5 +97,22 @@
         "react-dom": "^16.13.1",
         "react-router-dom": "^5.2.0",
         "react-validation-code": "^1.0.8"
+    },
+    "browserslist": [
+        "> 0.2%",
+        "last 2 versions",
+        "not dead"
+    ],
+    "husky": {
+        "hooks": {
+            "pre-commit": "node scripts/verify-commit.js"
+        }
+    },
+    "config": {
+        "validate-commit-msg": {
+            "scope": {
+                "required": true
+            }
+        }
     }
 }
