--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "builder-webpack-geektime": "^1.0.3",
         "cache-loader": "^4.1.0",
         "clean-webpack-plugin": "^3.0.0",
+        "commitizen": "^4.2.2",
         "cross-env": "^7.0.2",
         "css-loader": "^3.6.0",
         "eslint": "^7.12.1",
