--- a/package.json
+++ b/package.json
@@ -32,17 +32,19 @@
     },
     "homepage": "https://github.com/chenqinyang1994/antd-system-tencent-cloud#readme",
     "devDependencies": {
-        "@babel/core": "^7.10.5",
+        "@babel/core": "^7.12.3",
         "@babel/eslint-parser": "^7.12.1",
-        "@babel/plugin-proposal-class-properties": "^7.10.4",
-        "@babel/plugin-transform-runtime": "^7.10.5",
-        "@babel/preset-env": "^7.10.4",
-        "@babel/preset-react": "^7.10.4",
+        "@babel/plugin-proposal-class-properties": "^7.12.1",
+        "@babel/plugin-transform-runtime": "^7.12.1",
+        "@babel/preset-env": "^7.12.1",
+        "@babel/preset-react": "^7.12.5",
+        "@commitlint/cli": "^11.0.0",
+        "@commitlint/config-angular": "^11.0.0",
         "add-asset-html-webpack-plugin": "^3.1.3",
-        "autoprefixer": "^9.8.5",
-        "babel-loader": "^8.1.0",
+        "autoprefixer": "^9.8.6",
+        "babel-loader": "^8.2.1",
         "babel-plugin-add-module-exports": "^1.0.4",
-        "babel-plugin-import": "^1.13.0",
+        "babel-plugin-import": "^1.13.1",
         "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
         "builder-webpack-geektime": "^1.0.3",
         "cache-loader": "^4.1.0",
@@ -50,22 +52,22 @@
         "commitizen": "^4.2.2",
         "cross-env": "^7.0.2",
         "css-loader": "^3.6.0",
-        "eslint": "^7.12.1",
-        "eslint-config-airbnb-base": "^14.2.0",
+        "eslint": "^7.13.0",
+        "eslint-config-airbnb-base": "^14.2.1",
         "eslint-config-prettier": "^6.15.0",
         "eslint-plugin-import": "^2.22.1",
         "express": "^4.17.1",
-        "file-loader": "^6.0.0",
+        "file-loader": "^6.2.0",
         "friendly-errors-webpack-plugin": "^1.7.0",
         "glob": "^7.1.6",
-        "html-webpack-plugin": "^4.3.0",
+        "html-webpack-plugin": "^4.5.0",
         "http-server": "^0.12.3",
         "image-webpack-loader": "^7.0.1",
-        "less": "^3.11.3",
+        "less": "^3.12.2",
         "less-loader": "^6.2.0",
         "loader-runner": "^4.1.0",
         "mini-css-extract-plugin": "^0.9.0",
-        "optimize-css-assets-webpack-plugin": "^5.0.3",
+        "optimize-css-assets-webpack-plugin": "^5.0.4",
         "postcss-less": "^3.1.4",
         "postcss-loader": "^3.0.0",
         "progress-bar-webpack-plugin": "^2.1.0",
@@ -73,29 +75,29 @@
         "px2rem-loader": "^0.1.9",
         "rimraf": "^3.0.2",
         "speed-measure-webpack-plugin": "^1.3.3",
-        "style-loader": "^1.2.1",
-        "terser-webpack-plugin": "^3.0.8",
+        "style-loader": "^1.3.0",
+        "terser-webpack-plugin": "^3.1.0",
         "validate-commit-msg": "^2.14.0",
-        "webpack": "^4.43.0",
-        "webpack-bundle-analyzer": "^3.8.0",
-        "webpack-cli": "^3.3.11",
+        "webpack": "^4.44.2",
+        "webpack-bundle-analyzer": "^3.9.0",
+        "webpack-cli": "^3.3.12",
         "webpack-dev-server": "^3.11.0",
-        "webpack-merge": "^5.0.8"
+        "webpack-merge": "^5.4.0"
     },
     "sideEffects": [
         "*.css",
         "*.less"
     ],
     "dependencies": {
-        "@babel/polyfill": "^7.10.4",
-        "@babel/runtime-corejs3": "^7.10.5",
-        "antd": "^4.6.1",
-        "core-js": "^3.6.5",
+        "@babel/polyfill": "^7.12.1",
+        "@babel/runtime-corejs3": "^7.12.5",
+        "antd": "^4.8.2",
+        "core-js": "^3.7.0",
         "lib-flexible": "^0.3.2",
-        "lodash": "^4.17.19",
+        "lodash": "^4.17.20",
         "normalize.css": "^8.0.1",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
+        "react": "^16.14.0",
+        "react-dom": "^16.14.0",
         "react-router-dom": "^5.2.0",
         "react-validation-code": "^1.0.8"
     },
