--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "husky": {
         "hooks": {
             "pre-commit": "node scripts/verify-commit.js",
-            "commit-msg": "node scripts/verify-commit.js"
+            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
         }
     }
 }
