--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "husky": {
         "hooks": {
             "pre-commit": "node scripts/verify-commit.js",
-            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS && node scripts/verify-commit.js"
+            "commit-msg": "node scripts/verify-commit.js"
         }
     }
 }
