--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "glob": "^7.1.6",
         "html-webpack-plugin": "^4.5.0",
         "http-server": "^0.12.3",
+        "husky": "^4.3.0",
         "image-webpack-loader": "^7.0.1",
         "less": "^3.12.2",
         "less-loader": "^6.2.0",
