--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "@babel/preset-env": "^7.12.1",
         "@babel/preset-react": "^7.12.5",
         "@commitlint/cli": "^11.0.0",
-        "@commitlint/config-angular": "^11.0.0",
+        "@commitlint/config-conventional": "^11.0.0",
         "add-asset-html-webpack-plugin": "^3.1.3",
         "autoprefixer": "^9.8.6",
         "babel-loader": "^8.2.1",
@@ -50,7 +50,6 @@
         "cache-loader": "^4.1.0",
         "clean-webpack-plugin": "^3.0.0",
         "commitizen": "^4.2.2",
-        "commitlint": "^11.0.0",
         "cross-env": "^7.0.2",
         "css-loader": "^3.6.0",
         "eslint": "^7.13.0",
@@ -110,8 +109,7 @@
     ],
     "husky": {
         "hooks": {
-            "pre-commit": "node scripts/verify-commit.js",
-            "commit-msg": "node scripts/verify-commit.js"
+            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
         }
     }
 }
