--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     ],
     "husky": {
         "hooks": {
-            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+            "commit-msg": "node scripts/verify-commit.js && commitlint -E HUSKY_GIT_PARAMS"
         }
     }
 }
