--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "st": "node ./src/index.js",
         "rm": "rimraf ./aaa",
         "eslint": "eslint ./src --fix",
-        "commit": "cz"
+        "commit": "cz",
+        "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
     },
     "repository": {
         "type": "git",
@@ -50,6 +51,7 @@
         "cache-loader": "^4.1.0",
         "clean-webpack-plugin": "^3.0.0",
         "commitizen": "^4.2.2",
+        "conventional-changelog-cli": "^2.1.1",
         "cross-env": "^7.0.2",
         "css-loader": "^3.6.0",
         "eslint": "^7.13.0",
