--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     ],
     "husky": {
         "hooks": {
-            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS && npm run changelog"
+            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
         }
     }
 }
