--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "builder-webpack-geektime": "^1.0.3",
         "cache-loader": "^4.1.0",
         "clean-webpack-plugin": "^3.0.0",
+        "colors": "^1.4.0",
         "commitizen": "^4.2.2",
         "conventional-changelog-cli": "^2.1.1",
         "cross-env": "^7.0.2",
